deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: myns
  name: flask-deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: flask-app
        image: mans8564/myapp:v1
        ports:
        - containerPort: 5002
